--- a/zuulservice/zuulservice.yml
+++ b/zuulservice/zuulservice.yml
@@ -1,4 +1,6 @@
-zuul.ignored-services: '*'
-zuul.prefix: /api
-zuul.routes.organizationservice: /organization/**
-zuul.routes.organizationservice: /licensing/**
+zuul:
+  ignored-services: '*' 
+  prefix: /api
+  routes:
+   organizationservice: /organization/**
+   licensingservice: /licensing/**
